
syntax = "proto3";

option java_multiple_files = true;
option java_package = "ser.grpc";
option java_outer_classname = "STestProto";

package stest;

message Person {
  string name = 1;
  string surname = 2;
  int32 birthYear = 3;
}

message PersonSeq {
  repeated Person persons = 1;
}

message FiveDoubles {
  double d0 = 1;
  double d1 = 2;
  double d2 = 3;
  double d3 = 4;
  double d4 = 5;
}

message FiveDoublesSeq {
  repeated FiveDoubles fiveDoubless = 1;
}

message Mixed {
  uint32 b = 1;
  int32 s = 2;
  int32 i = 3;
  float f = 4;
  double d = 5;
  string ss = 6;
}

message MixedSeq {
  repeated Mixed mixeds = 1;
}

message Empty {
}

service STest {
  rpc setDummy(Empty) returns (Empty) {}
  rpc setPerson(Person) returns (Empty) {}
  rpc setPersonSequence(PersonSeq) returns (Empty) {}
  rpc setFiveDoubles(FiveDoubles) returns (Empty) {}
  rpc setFiveDoublesSequence(FiveDoublesSeq) returns (Empty) {}
  rpc setMixed(Mixed) returns (Empty) {}
  rpc setMixedSequence(MixedSeq) returns (Empty) {}    
}